space designer cmp

--- a/force-app/main/default/lwc/reservationDetailForm/reservationDetailForm.html
+++ b/force-app/main/default/lwc/reservationDetailForm/reservationDetailForm.html
@@ -20,7 +20,7 @@
                     required>             
                 </lightning-combobox>
                 <lightning-slider class="slds-size_1-of-2 slds-m-top_small" label="For how many people?" value={numberOfPeople}
-                    min="2" max="250" size="large" onchange={handlePeopleSelect}>
+                    min="2" max="250" onchange={handlePeopleSelect}>
                 </lightning-slider>
             </lightning-layout-item>
             
